hphp/test/zend/bad/ext-gd/imagecharup_error4.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagecharup($image, 1, 'string', 5, 'C', 1);

?>